# fs-ext

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
docs/: async-guide.md  (+7 more)
fs_ext/: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT
fs_ext/.cargo/: config.toml
fs_ext/docs/: api-reference.md  async.md
fs_ext/src/: formats.rs  lib.rs  utils.rs
fs_ext/src/core/: mod.rs
fs_ext/src/core/file/: atomic.rs
fs_ext/src/core/types/: mod.rs  temp_dir.rs  temp_file.rs
fs_ext/src/fsx/: mod.rs
fs_ext/src/fsx/dir/: mod.rs  temp.rs
fs_ext/src/fsx/file/: atomic.rs  open.rs  temp.rs
fs_ext/src/fsx/types/: mod.rs  temp_file.rs
fs_ext/src/macros/: dir.rs  file.rs  load.rs  mod.rs  save.rs  temp.rs
fs_ext/src/test_utils/: custom_error.rs  file_count.rs  mod.rs
fs_ext/src/test_utils/asserts/: existing_dir_ok.rs  existing_file_ok.rs  mod.rs  new_dir_ok.rs  new_file_ok.rs  rejects_dir.rs  rejects_exisitng_file.rs  rejects_existing_dir.rs  rejects_file.rs  rejects_missing_path.rs
fs_ext/src/tokio/: mod.rs
fs_ext/src/tokio/dir/: queries.rs  temp.rs
fs_ext/src/tokio/file/: atomic.rs  open.rs  removal.rs
fs_ext/src/tokio/types/: dir_query.rs  mod.rs
fs_ext/src/tokio_fsx/: mod.rs  utils.rs
fs_ext/src/tokio_fsx/dir/: create.rs  mod.rs  temp.rs
fs_ext/src/tokio_fsx/file/: atomic.rs
fs_ext/src/tokio_fsx/types/: temp_dir.rs  temp_file.rs
fs_ext/src/traits/: format.rs  io_result_ext.rs  mod.rs  path_ext.rs
fs_ext/src/types/: mod.rs  path_kind.rs  write_options.rs
fs_ext/tests/: mod.rs
fs_ext/tests/macros/: dir.rs  file.rs  load.rs  save.rs  temp.rs
(+328 files in other folders)
