[package]
name = "fs-ext"
version = "0.1.0"
edition = "2024"

[dependencies]
filetime = "0.2.25"
# serde = "1.0.219"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
tempfile = "3.20.0"
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
toml = "0.9.5"
trash = "5.2.2"

[dev-dependencies]
fs_ext_test_macros = { path = "../fs_ext_test_macros" }
